k8s/applications/web/searxng/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 80
      targetPort: http
