k8s/applications/web/searxng/valkey-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: searxng
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: searxng-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
