k8s/applications/web/searxng/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - searx.eudald.gr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: searxng
      port: 80
